--- a/.github/workflows/test_and_curl.yaml
+++ b/.github/workflows/test_and_curl.yaml
@@ -44,7 +44,7 @@ jobs:
 
       - name: POST payload to your API
         run: |
-          curl -sS -X POST 'https://tu-api.example.com/hooks/github-release' \
+          curl -sS -X POST 'https://cacell16-pruebas-2025-12-08-26348625.dev.odoo.com/github/release-webhook' \
             -H 'Content-Type: application/json' \
             -H 'Authorization: Bearer token_de_prueba_123' \
             --data-binary @payload.json \
