--- a/.github/workflows/test_and_curl.yaml
+++ b/.github/workflows/test_and_curl.yaml
@@ -6,7 +6,7 @@ name: Deploy Info
 on:
   pull_request:
     types: [closed]
-    branches: [16]
+    branches: [main]
 
 permissions:
   pull-requests: read
