--- a/.github/workflows/test_and_curl.yaml
+++ b/.github/workflows/test_and_curl.yaml
@@ -86,7 +86,7 @@ jobs:
         env:
           ODOO_WEBHOOK_TOKEN: ${{ secrets.ODOO_WEBHOOK_TOKEN }}
         run: |
-          curl -sS -X POST 'https://trescloud-test-actionsv16-16-0-26384904.dev.odoo.com/github/release-webhook' \
+          curl -sS -X POST 'https://trescloud-test-actionsv16-16-0-26384904.dev.odoo.com/github/webhook' \
             -H 'Content-Type: application/json' \
             -H 'Authorization: Bearer token_de_prueba_123' \
             --data-binary @payload.json \
